# gc2n64

./: .gitignore  CMakeLists.txt
include/: common.h  comms.h  flash_utils.h  gamecube_controller.h  n64.h
pio/: joybus.pio  joybusN64.pio
src/: comms.cpp  flash_utils.cpp  gamecube_controller.cpp  main.cpp  n64.cpp
